source/gen/source/scanner_l.c
/* Generated by re2c 0.13.5 on Fri Jun 27 16:36:19 2014 */
#line 1 "D:/GitHub/TDR/source/scanner_l.re"
#include "platform/tdr_platform.h"
#include "parse/scanner.h"

#include "globals.h"
#include "scanner_l.h"
#include "parser_y.h"
int32_t scanner_scan(scanner_t *self, YYLTYPE *yylloc)
{
restart:
	if(YYCURSOR >= YYLIMIT)
	{
		return 0;
	}
	yylloc->first_line = scanner_top(self)->yylineno;
	yylloc->first_column = scanner_top(self)->yycolumn;
	g_yyloc = *yylloc;

	yytext = YYCURSOR;

#line 23 "D:/GitHub/TDR/source/gen/source/scanner_l.c"
{
	YYCTYPE yych;
	unsigned int yyaccept = 0;
	switch (YYGETCONDITION()) {
	case yycINITIAL: goto yyc_INITIAL;
	}
/* *********************************** */
yyc_INITIAL:

	YYFILL(14);
	yych = *YYCURSOR;
	switch (yych) {
	case '!':	goto yy4;
	case '"':	goto yy6;
	case '#':	goto yy8;
	case '&':
	case '(':
	case ')':
	case ',':
	case ':':
	case ';':
	case '<':
	case '>':
	case '{':
	case '}':	goto yy9;
	case '\'':	goto yy10;
	case '+':
	case '-':	goto yy12;
	case '.':	goto yy13;
	case '/':	goto yy14;
	case '0':	goto yy15;
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy17;
	case '=':	goto yy18;
	case 'A':
	case 'C':
	case 'D':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case 'h':
	case 'j':
	case 'k':
	case 'q':
	case 'z':	goto yy19;
	case 'B':	goto yy21;
	case 'E':	goto yy22;
	case '_':	goto yy23;
	case 'a':	goto yy24;
	case 'b':	goto yy25;
	case 'c':	goto yy26;
	case 'd':	goto yy27;
	case 'e':	goto yy28;
	case 'f':	goto yy29;
	case 'g':	goto yy30;
	case 'i':	goto yy31;
	case 'l':	goto yy32;
	case 'm':	goto yy33;
	case 'n':	goto yy34;
	case 'o':	goto yy35;
	case 'p':	goto yy36;
	case 'r':	goto yy37;
	case 's':	goto yy38;
	case 't':	goto yy39;
	case 'u':	goto yy40;
	case 'v':	goto yy41;
	case 'w':	goto yy42;
	case 'x':	goto yy43;
	case 'y':	goto yy44;
	default:	goto yy2;
	}
yy2:
	++YYCURSOR;
yy3:
	yyleng = YYCURSOR - yytext; scanner_locate(self);
#line 202 "D:/GitHub/TDR/source/scanner_l.re"
	{ goto restart;					 }
#line 126 "D:/GitHub/TDR/source/gen/source/scanner_l.c"
yy4:
	++YYCURSOR;
	switch ((yych = *YYCURSOR)) {
	case '=':	goto yy759;
	default:	goto yy5;
	}
yy5:
	yyleng = YYCURSOR - yytext; scanner_locate(self);
#line 47 "D:/GitHub/TDR/source/scanner_l.re"
	{return yytext[0];																}
#line 137 "D:/GitHub/TDR/source/gen/source/scanner_l.c"
yy6:
	++YYCURSOR;
	yyleng = YYCURSOR - yytext; scanner_locate(self);
#line 71 "D:/GitHub/TDR/source/scanner_l.re"
	{return tok_string;																}
#line 143 "D:/GitHub/TDR/source/gen/source/scanner_l.c"
yy8:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	goto yy754;
yy9:
	yych = *++YYCURSOR;
	goto yy5;
yy10:
	++YYCURSOR;
	yyleng = YYCURSOR - yytext; scanner_locate(self);
#line 72 "D:/GitHub/TDR/source/scanner_l.re"
	{return tok_char;																}
#line 156 "D:/GitHub/TDR/source/gen/source/scanner_l.c"
yy12:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy751;
	default:	goto yy3;
	}
yy13:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy749;
	default:	goto yy3;
	}
yy14:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '*':	goto yy728;
	case '/':	goto yy726;
	default:	goto yy3;
	}
yy15:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '.':	goto yy714;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy712;
	case 'E':
	case 'e':	goto yy717;
	case 'x':	goto yy722;
	default:	goto yy16;
	}
yy16:
	yyleng = YYCURSOR - yytext; scanner_locate(self);
#line 75 "D:/GitHub/TDR/source/scanner_l.re"
	{return tok_int;																}
#line 219 "D:/GitHub/TDR/source/gen/source/scanner_l.c"
yy17:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '.':	goto yy714;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy712;
	case 'E':
	case 'e':	goto yy717;
	default:	goto yy16;
	}
yy18:
	yych = *++YYCURSOR;
	switch (yych) {
	case '=':	goto yy710;
	default:	goto yy5;
	}
yy19:
	++YYCURSOR;
	yych = *YYCURSOR;
	goto yy46;
yy20:
	yyleng = YYCURSOR - yytext; scanner_locate(self);
#line 200 "D:/GitHub/TDR/source/scanner_l.re"
	{return tok_identifier;															}
#line 253 "D:/GitHub/TDR/source/gen/source/scanner_l.c"
yy21:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'E':	goto yy705;
	default:	goto yy46;
	}
yy22:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'N':	goto yy702;
	default:	goto yy46;
	}
yy23:
	yych = *++YYCURSOR;
	switch (yych) {
	case '_':	goto yy642;
	default:	goto yy46;
	}
yy24:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'b':	goto yy611;
	case 'l':	goto yy612;
	case 'n':	goto yy613;
	case 'r':	goto yy614;
	case 's':	goto yy615;
	default:	goto yy46;
	}
yy25:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'e':	goto yy587;
	case 'i':	goto yy588;
	case 'o':	goto yy589;
	case 'r':	goto yy590;
	case 'y':	goto yy591;
	default:	goto yy46;
	}
yy26:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'a':	goto yy551;
	case 'h':	goto yy552;
	case 'l':	goto yy553;
	case 'o':	goto yy554;
	default:	goto yy46;
	}
yy27:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'e':	goto yy517;
	case 'o':	goto yy518;
	case 'y':	goto yy520;
	default:	goto yy46;
	}
yy28:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'l':	goto yy441;
	case 'n':	goto yy442;
	case 'x':	goto yy443;
	default:	goto yy46;
	}
yy29:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'a':	goto yy408;
	case 'i':	goto yy409;
	case 'l':	goto yy410;
	case 'o':	goto yy411;
	case 'u':	goto yy412;
	default:	goto yy46;
	}
yy30:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'l':	goto yy398;
	case 'o':	goto yy399;
	default:	goto yy46;
	}
yy31:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'f':	goto yy345;
	case 'm':	goto yy347;
	case 'n':	goto yy348;
	case 's':	goto yy350;
	default:	goto yy46;
	}
yy32:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'a':	goto yy335;
	case 'i':	goto yy336;
	default:	goto yy46;
	}
yy33:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'o':	goto yy329;
	default:	goto yy46;
	}
yy34:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'a':	goto yy303;
	case 'e':	goto yy304;
	case 'i':	goto yy305;
	case 'o':	goto yy306;
	default:	goto yy46;
	}
yy35:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'p':	goto yy293;
	case 'r':	goto yy294;
	default:	goto yy46;
	}
yy36:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'a':	goto yy265;
	case 'r':	goto yy266;
	case 'u':	goto yy267;
	default:	goto yy46;
	}
yy37:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'a':	goto yy229;
	case 'e':	goto yy230;
	default:	goto yy46;
	}
yy38:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'e':	goto yy175;
	case 'i':	goto yy176;
	case 't':	goto yy177;
	case 'u':	goto yy178;
	case 'w':	goto yy179;
	case 'y':	goto yy180;
	default:	goto yy46;
	}
yy39:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'h':	goto yy136;
	case 'r':	goto yy137;
	case 'y':	goto yy138;
	default:	goto yy46;
	}
yy40:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'i':	goto yy94;
	case 'n':	goto yy95;
	case 's':	goto yy96;
	default:	goto yy46;
	}
yy41:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'a':	goto yy67;
	case 'e':	goto yy68;
	case 'i':	goto yy69;
	case 'o':	goto yy70;
	default:	goto yy46;
	}
yy42:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'h':	goto yy55;
	case 'i':	goto yy56;
	default:	goto yy46;
	}
yy43:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'o':	goto yy52;
	default:	goto yy46;
	}
yy44:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'i':	goto yy47;
	default:	goto yy46;
	}
yy45:
	++YYCURSOR;
	YYFILL(1);
	yych = *YYCURSOR;
yy46:
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy45;
	default:	goto yy20;
	}
yy47:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'e':	goto yy48;
	default:	goto yy46;
	}
yy48:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'l':	goto yy49;
	default:	goto yy46;
	}
yy49:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'd':	goto yy50;
	default:	goto yy46;
	}
yy50:
	++YYCURSOR;
	switch ((yych = *YYCURSOR)) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy45;
	default:	goto yy51;
	}
yy51:
	yyleng = YYCURSOR - yytext; scanner_locate(self);
#line 179 "D:/GitHub/TDR/source/scanner_l.re"
	{ return tok_reserved_keyword; }
#line 603 "D:/GitHub/TDR/source/gen/source/scanner_l.c"
yy52:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'r':	goto yy53;
	default:	goto yy46;
	}
yy53:
	++YYCURSOR;
	switch ((yych = *YYCURSOR)) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy45;
	default:	goto yy54;
	}
yy54:
	yyleng = YYCURSOR - yytext; scanner_locate(self);
#line 178 "D:/GitHub/TDR/source/scanner_l.re"
	{ return tok_reserved_keyword; }
#line 682 "D:/GitHub/TDR/source/gen/source/scanner_l.c"
yy55:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'e':	goto yy60;
	case 'i':	goto yy61;
	default:	goto yy46;
	}
yy56:
	yych = *++YYCURSOR;
	switch (yych) {
	case 't':	goto yy57;
	default:	goto yy46;
	}
yy57:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'h':	goto yy58;
	default:	goto yy46;
	}
yy58:
	++YYCURSOR;
	switch ((yych = *YYCURSOR)) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy45;
	default:	goto yy59;
	}
yy59:
	yyleng = YYCURSOR - yytext; scanner_locate(self);
#line 177 "D:/GitHub/TDR/source/scanner_l.re"
	{ return tok_reserved_keyword; }
#line 774 "D:/GitHub/TDR/source/gen/source/scanner_l.c"
yy60:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'n':	goto yy65;
	default:	goto yy46;
	}
yy61:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'l':	goto yy62;
	default:	goto yy46;
	}
yy62:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'e':	goto yy63;
	default:	goto yy46;
	}
yy63:
	++YYCURSOR;
	switch ((yych = *YYCURSOR)) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy45;
	default:	goto yy64;
	}
yy64:
	yyleng = YYCURSOR - yytext; scanner_locate(self);
#line 176 "D:/GitHub/TDR/source/scanner_l.re"
	{ return tok_reserved_keyword; }
#line 865 "D:/GitHub/TDR/source/gen/source/scanner_l.c"
yy65:
	++YYCURSOR;
	switch ((yych = *YYCURSOR)) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy45;
	default:	goto yy66;
	}
yy66:
	yyleng = YYCURSOR - yytext; scanner_locate(self);
#line 175 "D:/GitHub/TDR/source/scanner_l.re"
	{ return tok_reserved_keyword; }
#line 938 "D:/GitHub/TDR/source/gen/source/scanner_l.c"
yy67:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'r':	goto yy92;
	default:	goto yy46;
	}
yy68:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'c':	goto yy87;
	default:	goto yy46;
	}
yy69:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'r':	goto yy81;
	default:	goto yy46;
	}
yy70:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'i':	goto yy72;
	case 'l':	goto yy71;
	default:	goto yy46;
	}
yy71:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'a':	goto yy75;
	default:	goto yy46;
	}
yy72:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'd':	goto yy73;
	default:	goto yy46;
	}
yy73:
	++YYCURSOR;
	switch ((yych = *YYCURSOR)) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy45;
	default:	goto yy74;
	}
yy74:
	yyleng = YYCURSOR - yytext; scanner_locate(self);
#line 190 "D:/GitHub/TDR/source/scanner_l.re"
	{ return tok_reserved_keyword; }
#line 1048 "D:/GitHub/TDR/source/gen/source/scanner_l.c"
yy75:
	yych = *++YYCURSOR;
	switch (yych) {
	case 't':	goto yy76;
	default:	goto yy46;
	}
yy76:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'i':	goto yy77;
	default:	goto yy46;
	}
yy77:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'l':	goto yy78;
	default:	goto yy46;
	}
yy78:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'e':	goto yy79;
	default:	goto yy46;
	}
yy79:
	++YYCURSOR;
	switch ((yych = *YYCURSOR)) {
	case '0':
